# examples

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  cs_get_started.md  datapane_components-0.0.0-py3-none-any.whl  pyproject.toml  quickstart.ipynb  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy-apps.yml  deploy-reports.yml
apps/airport-mapper/: README.md  app.py
apps/background-remover/: README.md  app.py  pyproject.toml  requirements.txt
apps/chatgpt-analyzer/: README.md  app.py
apps/classifier-dashboard/: app.ipynb
apps/classifier-dashboard/assets/: experiment.ipynb
apps/dataset-scatterplot/: README.md  app.py  pyproject.toml
apps/datatable-demo/: README.md  app.py
apps/dp-demo-survey-data-app/: .gitignore  app.ipynb  pyproject.toml
apps/dp-demo-survey-data-app/assets/: data_to_sql.ipynb
apps/dp-hr-analytics-app/: app.py  hranalytics.py
apps/dp-template-classifier-dashboard/: app.ipynb  pyproject.toml  requirements.txt
apps/dp-template-classifier-dashboard/assets/: experiment.ipynb
apps/dp-template-classifier-dashboard/assets/discussion/: KNN.md
apps/dp-template-classifier-dashboard/assets/models/: DecisionTree.pkl
apps/google-trends/: README.md  report.ipynb  report.py
apps/hacker-news-feed/: README.md  app.py  pyproject.toml
apps/image-pipeline-articulation/: README.md  app.ipynb  pyproject.toml
apps/iris-plotter/: README.md  app.py  requirements.txt
apps/quickstart/: app.ipynb
apps/startup-calculator/: README.md  app.py  calculator.ipynb  datapane.yaml  financial_model.py
apps/stock-dashboard/: README.md  app.py
apps/stock-reporting/: README.md  app.py  report.html  report.ipynb  zoom_stock_data.csv
apps/stock-ticker/: README.md  app.py  requirements.txt
apps/streamlit-df/: README.md  app.py  requirements.txt
apps/survey-data-app/: README.md  app.ipynb
background-remover/: app.py  pyproject.toml
blocks-with-comments/: app.ipynb  comments.db  pyproject.toml
ci/: deploy-apps.py  deploy-reports.py  fly.toml  nb.Dockerfile  py.Dockerfile
components/: README.md  __init__.py  calendar-heatmap.py  chatgpt.py  datasets.py  timeline.py
convert/stock-reporting/: netflix_stock_data.csv
dataset-scatterplot/: app.py  pyproject.toml
dp-template-classifier-dashboard/: README.md  pyproject.toml  requirements.txt  template.ipynb
dp-template-classifier-dashboard/assets/: results.json
dp-template-classifier-dashboard/assets/models/: KNN.pkl  RandomForest.pkl
hacker-news-feed/: app.py  pyproject.toml
image-pipeline-articulation/: app.ipynb  pyproject.toml  requirements.txt
reports/: README.md  extra_reports.md
reports/classifier-dashboard/: README.md  pyproject.toml  report.ipynb  template.ipynb  template.py
reports/classifier-dashboard/assets/: experiment.ipynb
reports/classifier-dashboard/assets/discussion/: DecisionTree.md
reports/google-trends/: trends.ipynb
reports/hello-world/: README.md  hello-world.ipynb  report.ipynb
reports/machine-learning-pipeline/: README.md  machine_learning_pipeline.ipynb  report.ipynb
reports/quickstart/: local_report.py  uploaded_report.py
reports/sales-report/: Sales_report.ipynb  report.html  report.ipynb  sales_report.ipynb
reports/social-media-dashboard/: .gitignore  README.md  pyproject.toml  report.ipynb  template.ipynb  template.py  youtube_analytics_data.ipynb
reports/social-media-dashboard/assets/: youtube_analytics_data.ipynb  youtube_analytics_data.json
reports/sqlite-dashboard/: report.ipynb  sqlite_dashboard.ipynb
reports/stock-reporting/: Datapane_Stock_Market_Analysis.ipynb  report.ipynb
reports/superstore-reporting/: Datapane_E_Commerce_Store_Analysis.ipynb  report.ipynb
reports/survey-data-report/: .gitignore  README.md  pyproject.toml  report.ipynb  template.ipynb  template.py
reports/text-heavy-report/: README.md  pyproject.toml  report.ipynb  report.py  requirements.txt  template.ipynb  template.py
reports/text-heavy-report/assets/: article.ipynb  article.md
reports/text-report-article/: Article & Blog Post Template.ipynb
scratch/: README.md
scratch/apps/blocks-with-comments/: app.ipynb  comments.db  pyproject.toml
scratch/apps/classifier-dashboard/: README.md  app.ipynb
scratch/apps/classifier-dashboard/assets/discussion/: MLP.md  RandomForest.md  SVC.md
scratch/apps/classifier-dashboard/assets/models/: MLP.pkl  SVC.pkl
scratch/apps/with-auth/: app.py
scratch/blocks-with-comments/: app.ipynb  requirements.txt
scratch/reports/: covid19_unemployment_rate.ipynb  sankey_diagram_report.ipynb  tutorial_report.ipynb
stock-ticker/: app.py
streamlit-df/: app.py
with-auth/: app.py
