[tool.poetry]
name = "datapane-components"
version = "0.0.1"
description = "Reusable Datapane components and sample reports and apps"
authors = ["Datapane <dev@datapane.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "datapane_components"}]

[tool.poetry.dependencies]
# python = "^3.8"
python = ">= 3.8.0, < 3.12.0"
datapane = "^0.16.1"
# no support for py3.11
# rembg = "^2.0.30"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
scikit-image = "^0.20.0"
pooch = "^1.6.0"
yfinance = "^0.2.10"
plotly = "^5.13.0"
Platypus-Opt = "^1.0.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
sqlalchemy = "^2.0.1"
# needed for social-media report
google-api-python-client = "^2.56.0"
google-auth = "^2.10.0"
google-auth-oauthlib = "^0.5.2"
google-auth-httplib2 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
# include = '\.pyi?$'

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
#select = ["E", "F"]
ignore = ["E501"]


# Allow autofix for all enabled rules (when `--fix`) is provided.
#fixable = ["A", "B", "C", "D", "E", "F", "..."]
#unfixable = []

line-length = 120
target-version = "py310"