[tool.poetry]
name = "background-remover"
version = "0.1.0"
description = ""
authors = ["Dr. Shahin Rostami <hello@shahinrostami.com>"]
readme = "README.md"
packages = [{include = "background_remover"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
rembg = "^2.0.30"
datapane = {url = "https://datapane-cdn.com/python-client-dev/datapane--py3-none-any.whl?cache-bust=55345"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
