[tool.poetry]
name = "hacker-news-feed"
version = "0.1.0"
description = ""
authors = ["Dr. Shahin Rostami <hello@shahinrostami.com>"]
readme = "README.md"
packages = [{include = "hacker_news_feed"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
datapane = {url = "https://datapane-cdn.com/python-client-dev/datapane--py3-none-any.whl?cache-bust=55345"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
