[tool.poetry]
name = "image-pipeline"
version = "0.1.0"
description = "Image Pipeline"
authors = ["Dr. Shahin Rostami <hello@shahinrostami.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
altair = "^4.2.0"
scikit-learn = "^1.1.1"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
scikit-image = "^0.19.3"
pooch = "^1.6.0"
datapane = {url = "https://datapane-cdn.com/python-client-dev/datapane--py3-none-any.whl?cache-bust=55345"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
