[tool.poetry]
name = "dp-demo-survey-data-app"
version = "0.1.0"
description = ""
authors = ["Dr. Shahin Rostami <hello@shahinrostami.com>"]
readme = "README.md"
packages = [{include = "dp_demo_survey_data_app"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12.0"
sqlalchemy = "^2.0.4"
datapane = "^0.16.1"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
