[tool.poetry]
name = "dp-template-survey-data-report"
version = "0.1.0"
description = "Datapane template: Survey data report"
authors = ["Datapane <dev@datapane.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
jupyterlab = "^3.4.5"
datapane = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
