[tool.poetry]
name = "dp-template-<template_slug>"
version = "0.1.0"
description = "Datapane Template: <template_name>"
authors = ["Datapane <dev@datapane.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
jupyterlab = "^3.4.5"
Platypus-Opt = "^1.0.4"
plotly = "^5.10.0"
datapane = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
