[tool.poetry]
name = "blocks-with-comments"
version = "0.1.0"
description = "Datapane Component: Blocks with Comments"
authors = ["Dr. Shahin Rostami <hello@shahinrostami.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
jupyterlab = "^3.4.3"
sqlalchemy = "^1.4.46"
datapane = {url = "https://datapane-cdn.com/python-client/dev/datapane--py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
